styles: fix resume on mobile

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -1,4 +1,7 @@
 .resume {
+  display: flex;
+  flex-direction: column;
+
   h1, h3, h4, h5 {
     margin-bottom: 8px;
   }
@@ -12,7 +15,7 @@
   .summary {
     animation-delay: 0.2s;
     display: flex;
-    padding: 48px 0px;
+    padding: $spacing-unit 0px;
     width: 100%;
 
     h1 {
@@ -24,7 +27,7 @@
   .body {
     display: flex;
     gap: 60px;
-    padding: 48px 0px;
+    padding: $spacing-unit 0px;
     border-top: 1px solid rgba(34, 34, 34, 0.2);
 
     .experience {
@@ -54,7 +57,7 @@
 
     .job {
       display: flex;
-      gap: 40px;
+      gap: $spacing-unit / 2;
 
       &--company {
         width: 360px;
@@ -88,12 +91,12 @@
 
     .education {
       display: flex;
-      gap: 40px;
+      gap: $spacing-unit;
       animation-delay: 1s;
 
       .schooling {
         display: flex;
-        gap: 20px;
+        gap: $spacing-unit / 2;
 
         h5 {margin-bottom: 0px;}
       }
@@ -122,5 +125,39 @@
       }
     }
   }
-  
+
+  @media screen and (max-width: $mobile-sm) {
+    .summary {
+      padding: 0 0 ($spacing-unit / 2) 0;
+    }
+
+    .body {
+      padding: ($spacing-unit / 2) 0;
+      flex-direction: column-reverse;
+      gap: $spacing-unit / 2;
+
+      .job {
+        flex-direction: column;
+        gap: 0;
+        border-bottom: 1px solid rgba(34, 34, 34, 0.2);
+        margin-bottom: $spacing-unit / 2;
+      }
+
+      .education {
+        flex-direction: column;
+        gap: 0;
+
+        .schooling {
+          flex-direction: column;
+          gap: 0;
+        }
+      }
+    }
+
+    .col-right {
+      border-bottom: 1px solid rgba(34, 34, 34, 0.2);
+    }
+
+
+  }
 }
