--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,7 @@
 @import "animations";
 @import "colors";
 @import "typography";
+@import "layout";
 @import "footer";
 @import "minima";
 @import "about";
@@ -19,7 +20,7 @@ body {
 }
 
 .wrapper {
-  max-width: 1000px;
+  max-width: $laptop;
   margin: $spacing-unit auto;
   padding: 0 0%;
 }
@@ -70,8 +71,8 @@ a:hover {
 }
 
 .content {
-  margin-top: 50px;
-  padding: 0 10%;
+  margin-top: $spacing-unit;
+  padding: 0;
   line-height: $line-height;
   @include fadeInAnimation;
 }
@@ -81,18 +82,29 @@ a:hover {
   font-style: italic;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: $mobile-sm) {
+  .wrapper {
+    max-width: $mobile-sm;
+    margin:  0 ($spacing-unit * 0.75);
+  }
+
   .logo {
-    margin-top: 80px;
+    margin-top: $spacing-unit * 2;
   }
 
   .site-nav {
     left: 0;
   }
 
+  .content {
+    font-size: $base-font-size * 0.80;
+  }
+
   .me {
     display: block;
     float: none;
     margin: 0 auto 1em auto;
+    width: $mobile-sm - ($spacing-unit * 2);
+    height: auto;
   }
 }
